# Meus_Projetos

Curriculo.py/: Calculadora.py  biblioteca_de_livros.py  deletar_email.py  organizador_cliente.py  pyproject.toml
